Make repository completely use grpc instead of http for interactions with server